# SOVEREIGN-TRACE-PROTOCOL

./: .coveragerc  .gitignore  .safety-policy.yml  ACCEPTABLE-USE-POLICY.md  AI-ETHICS-STATEMENT.md  AUDIT-METHODOLOGY.md  AUDITOR-VETTING-PROCESS.md  CERTIFICATION.md  CHANGELOG.md  CITATION.cff  CONTRIBUTOR-LICENSE-AGREEMENT.md  CONTRIBUTOR-TERMS.md  DATA-PROCESSING-AGREEMENT.md  DISASTER-RECOVERY.md  EPISTEMIC-DEBT-SCORE.md  EXPORT-CONTROL.md  HOW-TO-SUBMIT.md  LEGAL-POSTURE.md  LICENSE   LICENSE-COMMERICAL.md  LICENSE-EXPLANATION.md  LICENSE-GPLv3.md  LICENSE_ENGINE.md  LICENSE_SPEC.md  METHODOLOGY.md  MUTUAL-NDA.md  NON-RECOURSE-STATEMENT.md  NOTICE  PATENTS.md  PRINCIPLES.md  PRIVACY-POLICY.md  QUICKSTART.md  README.md  REPO_STRUCTURE.md  REPO_STRUCTURE_FULL.md  SECURITY-INSIGHTS.yml  SECURITY.md  STANDARDS-ALIGNMENT.md  TERMS OF SERVICE.md  TRADEMARK-USAGE-POLICY.md  (+7 more)
.github/: SECURITY.md  bad_actors.yml  revoked-auditors.json  verified-auditors.json
.github/ISSUE_TEMPLATE/: 00-feedback.yml  00-general-feedback-&-templates-ides.yml  01-ai-failure.yml  02-research-priority.yml  03-evidence-chain.yml  04-creative-priority.yml  05-clinical-record.yml  06-scope-anchor.yml  07-general-trace.yml  08-foresight-seal.yml  09-webeater-link.yml  10-audit-request-snapshot.yml  10-audit-request-tier1-5.yml  10-audit-request.yml  11-audit-completion.yml  12-audit-application.yml  13-integrity-violation.yml  14-near-miss.yml  15‑prompt‑seal.yml  16‑model‑weights‑seal.yml  17‑dataset‑declaration.yml  18‑agreement‑seal.yml  19‑release‑seal.yml  20‑decision‑record.yml  21‑vulnerability‑timeline.yml  22‑ai‑output‑sample.yml  23 – Bias-Audit-Record  24-Red-Team-Engagement  25 – Model-Card-Seal  26 – Human-Oversight-Log  27-Code-Snippet-Seal.yml  28-Research-Logbook.yml  29-Identity-Anchor.yml  30-Temporal-Commitment.yml  ai-failure-submission.md  clinical-record.yml  config.yml  creative-priority.yml  evidence-chain.yml  general-trace.yml  (+2 more)
.github/actions/stp-seal/: action.yml
.github/workflows/: abuse-detector.yml  audit-verify.yml  auto-seal.yml  blockchain-anchor.yml  publish-to-pypi.yml  python-publish.yml  sovereign-trace-audit-verify.yml  sovereign-trace-auto-seal.yml  test.yml
chaos/: experiment.json
concept/: DUAL-AUDIENCE-ARCHITECT.md  GLOSSARY.md  PRIOR-ART.md  SOVEREIGN-TRACE-v0.1-SPEC.md  SOVEREIGN-TRACE-v0.2-SPEC.md  SOVEREIGN-TRACE-v0.3-SPEC.md  SOVEREIGN-TRACE-v0.4-SPEC.md  SUBMISSION-TEMPLATE.md  TRUST-WITHOUT-IDENTITY.md  USE-CASES.md  WEBEATER-SPEC.md
docs/: diagram.md  stp_diagram.md
docs/whitepapers/: STP-WHITE-PAPER-v1.1.md
ledger/: LEDGER-001.md  PLACEHOLDER.md  STP-CLINICAL-RECORD-March-25-2026-343075.json  STP-CLINICAL-RECORD-March-25-2026-91F0E9.json  STP-CREATIVE-PRIORITY-2026-03-09-000008.json  STP-CREATIVE-PRIORITY-2026-03-10-000013.json  STP-CREATIVE-PRIORITY-2026-03-10-000014.json  STP-CREATIVE-PRIORITY-March-24-2026-2A3BAF.json  STP-CREATIVE-PRIORITY-March-24-2026-4A5EF0.json  STP-CREATIVE-PRIORITY-March-24-2026-8B1D2E.json  STP-CREATIVE-PRIORITY-March-24-2026-E9C306.json  STP-EVIDENCE-CHAIN-March-24-2026-0794A2.json  STP-EVIDENCE-CHAIN-March-24-2026-3B7DE3.json  STP-EVIDENCE-CHAIN-March-24-2026-8ABB30.json  STP-EVIDENCE-CHAIN-March-25-2026-D0D735.json  STP-FORESIGHT-SEAL-2026-03-10-000012.json  STP-FORESIGHT-SEAL-2026-03-11-000015.json  STP-GENERAL-TRACE-2026-03-09-000005.json  STP-GENERAL-TRACE-2026-03-10-000006.json  STP-GENERAL-TRACE-2026-03-10-000007.json  STP-GENERAL-TRACE-2026-03-10-000009.json  STP-GENERAL-TRACE-2026-03-10-000010.json  STP-GENERAL-TRACE-2026-03-10-000011.json  STP-GENERAL-TRACE-April-1-2026-0D8223.json  STP-GENERAL-TRACE-April-1-2026-C49B22.json  STP-GENERAL-TRACE-March-24-2026-03C2A9.json  STP-GENERAL-TRACE-March-24-2026-CE0CDF.json  STP-GENERAL-TRACE-March-25-2026-3A0CDF.json  STP-GENERAL-TRACE-March-25-2026-5496D4.json  STP-GENERAL-TRACE-March-25-2026-997E9E.json  STP-GENERAL-TRACE-March-25-2026-D04983.json  STP-GENERAL-TRACE-March-25-2026-EED151.json  STP-GENERAL-TRACE-March-26-2026-8A049A.json  STP-GENERAL-TRACE-March-27-2026-AFCE36.json  STP-GENERAL-TRACE-March-31-2026-028FF7.json  STP-GENERAL-TRACE-March-31-2026-1A3C1A.json  STP-GENERAL-TRACE-March-31-2026-1DE84E.json  STP-GENERAL-TRACE-March-31-2026-220109.json  STP-GENERAL-TRACE-March-31-2026-3B5639.json  STP-GENERAL-TRACE-March-31-2026-4B6F0F.json  (+29 more)
scripts/: migrate_ledger_to_hierarchy.py  stp_abuse_detector.py  stp_blockchain_anchor.py
sovereign_trace/: sovereign_trace_stamp (2).py  sovereign_trace_stamp.py
sovereign_trace/FROZEN-1.0-RETIRED/: ARCHIVE-EMPTY.md
sovereign_trace/FROZEN-2.0-RETIRED/: sovereign_trace_stamp-frozen-v2.0-retired.py
sovereign_trace/FROZEN-3.0-RETIRED/: FROZEN-3.0-MANIFEST.md
stamp/: FROZEN-2.0-MANIFEST.md  FROZEN-4.0-MANIFEST.md  __init__.py  sovereign_trace_stamp.py
stamp/FROZEN-1.0-RETIRED/: FROZEN-1.0-RETIRED.md
stamp/FROZEN-3.0-RETIRED/: sovereign_trace_stamp.py
tests/: conftest.py  test_async_stamp.py  test_backward_compat.py  test_cli.py  test_concurrency.py  test_display.py  test_dreamspell_calendar.py  test_file_integrity.py  test_frozen_version.py  test_gregorian.py  test_hebrew_anchors.py  test_hebrew_calendar.py  test_hebrew_edge_cases.py  test_jd_bridge.py  test_package_imports.py  test_performance.py  test_properties.py  test_regression.py  test_self_test_runner.py  test_serialization.py  test_sovereign_record_class.py  test_sovereign_stamp_class.py  test_stamp_and_record.py  test_stamp_batch.py  test_stamp_core.py  test_stamp_datetime_handling.py  test_stamp_error_handling.py  test_stamp_normalization.py  test_verify.py  test_verify_result.py
tests/REPORTS/test_display/: placeholder.md
tests/fuzz/: fuzz_stamp.py
