[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sovereign-trace"
version = "2.0.0"
description = "Permanent personal and organizational significance infrastructure. Triple-time cryptographic stamp — Gregorian, Hebrew lunisolar, 13 Moon Dreamspell. FROZEN-2.0."
readme = "README.md"
license = { text = "Apache-2.0 OR GPL-3.0-or-later" }
authors = [
  { name = "Sheldon K. Salmon", email = "aionsystem2026@gmail.com" }
]
keywords = [
  "sovereign trace",
  "significance",
  "cryptographic stamp",
  "hebrew calendar",
  "dreamspell",
  "immutable",
  "SHA-256",
  "personal infrastructure",
  "temporal sovereignty",
  "epistemic infrastructure",
  "AI audit",
  "AI reliability",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "Topic :: Utilities",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sovereign-trace = "sovereign_trace_stamp:_cli"

[project.urls]
Homepage   = "https://github.com/AionSystem/SOVEREIGN-TRACE-PROTOCOL"
Repository = "https://github.com/AionSystem/SOVEREIGN-TRACE-PROTOCOL"
Issues     = "https://github.com/AionSystem/SOVEREIGN-TRACE-PROTOCOL/issues"

[tool.hatch.build.targets.wheel]
sources = ["stamp"]
exclude = ["stamp/FROZEN-1.0-RETIRED"]

[tool.hatch.build.targets.sdist]
include = [
  "stamp/sovereign_trace_stamp.py",
  "README.md",
  "concept/",
  "ledger/",
  "LICENSE",
  "LICENSE-COMMERCIAL.md",
  "LICENSE-EXPLANATION.md",
  "NOTICE",
  "PATENTS.md",
  "TRADEMARK.md",
  "TRADEMARK-USAGE-POLICY.md",
  "LEGAL-POSTURE.md",
  "PRINCIPLES.md",
  "METHODOLOGY.md",
  "CERTIFICATION.md",
  "TERMS-OF-SERVICE.md",
  "CONTRIBUTOR-TERMS.md",
  "CONTRIBUTOR-LICENSE-AGREEMENT.md",
  "DATA-PROCESSING-AGREEMENT.md",
  "MUTUAL-NDA.md",
  "UNILATERAL-NDA.md",
  "EXPORT-CONTROL.md",
  "SECURITY.md",
  "SECURITY-INSIGHTS.yml",
  "AI-ETHICS-STATEMENT.md",
  "PRIVACY-POLICY.md",
  "ACCEPTABLE-USE-POLICY.md",
  "CITATION.cff",
]