[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sovereign-trace"
version = "4.0.0"
description = "Permanent personal and organizational significance infrastructure. Triple-time cryptographic stamp — Gregorian, Hebrew lunisolar, 13 Moon Dreamspell. FROZEN-4.0."
readme = "README.md"
license = { text = "Apache-2.0 OR GPL-3.0-or-later" }
authors = [
  { name = "Sheldon K. Salmon", email = "aionsystem@outlook.com" }
]
keywords = [
  "sovereign trace",
  "significance",
  "cryptographic stamp",
  "hebrew calendar",
  "dreamspell",
  "immutable",
  "SHA-256",
  "personal infrastructure",
  "temporal sovereignty",
  "epistemic infrastructure",
  "AI audit",
  "AI reliability",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "Topic :: Utilities",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sovereign-trace = "sovereign_trace_stamp:_cli"

[project.urls]
Homepage   = "https://github.com/AionSystem/SOVEREIGN-TRACE-PROTOCOL"
Repository = "https://github.com/AionSystem/SOVEREIGN-TRACE-PROTOCOL"
Issues     = "https://github.com/AionSystem/SOVEREIGN-TRACE-PROTOCOL/issues"

[tool.hatch.build.targets.wheel]
sources = ["stamp"]
only-include = ["stamp/sovereign_trace_stamp.py"]

[tool.hatch.build.targets.sdist]
include = [
  "sovereign_trace/sovereign_trace_stamp.py",
  "README.md",
  "QUICKSTART.md",
  "concept/",
  "badges/",
  "ledger/",
  "LICENSE",
  "LICENSE-COMMERCIAL.md",
  "LICENSE-EXPLANATION.md",
  "NOTICE",
  "PATENTS.md",
  "TRADEMARK.md",
  "TRADEMARK-USAGE-POLICY.md",
  "LEGAL-POSTURE.md",
  "PRINCIPLES.md",
  "METHODOLOGY.md",
  "CERTIFICATION.md",
  "TERMS-OF-SERVICE.md",
  "CONTRIBUTOR-TERMS.md",
  "CONTRIBUTOR-LICENSE-AGREEMENT.md",
  "DATA-PROCESSING-AGREEMENT.md",
  "MUTUAL-NDA.md",
  "UNILATERAL-NDA.md",
  "EXPORT-CONTROL.md",
  "SECURITY.md",
  "SECURITY-INSIGHTS.yml",
  "AI-ETHICS-STATEMENT.md",
  "PRIVACY-POLICY.md",
  "ACCEPTABLE-USE-POLICY.md",
  "CITATION.cff",
]

# ========== TESTING & HARDENING TOOL CONFIGURATIONS ==========

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "anchor: verified calendar anchor — do not modify without re-verifying against Hebcal/Chabad/pyluach",
    "regression: guard against named defect from a retired frozen version",
    "slow: many calendar calls or large date ranges — excluded from fast CI",
    "cli: requires subprocess or stdin/stdout capture",
    "hypothesis: property-based test (auto-applied by hypothesis plugin)",
    "asyncio: async test function",
    "concurrency: multi-thread or concurrent access test",
    "benchmark: timing test — requires baseline",
    "fuzzing: Atheris‑based fuzz tests (run separately)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:hypothesis",
    "ignore::PendingDeprecationWarning:sovereign_trace_stamp",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".git", "ledger", "badges", "concept"]
skips = ["B101", "B102"]  # assert and exec warnings – acceptable for test code
severity = "MEDIUM"
confidence = "MEDIUM"

[tool.mutmut]
paths_to_mutate = ["stamp/"]
runner = "pytest"
tests_dir = "tests/"
backup = false
mutation_whitelist = []

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # gradual typing

[tool.safety]
policy_file = ".safety-policy.yml"  # optional – create if needed
ignore_cvss_severity_below = "medium"
